#:schema https://json.schemastore.org/pyproject.json

[project]
name = "sandbox-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137",
    "uvicorn[standard]>=0.49",
    "pydantic-settings>=2.14",
    "sqlalchemy>=2.0.51",
    "PyJWT>=2.13",
    "python-dotenv>=1.0",
    "pwdlib[argon2]>=0.3",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.18.5"
]

[tool.fastapi]
entrypoint = "src.main:app"
